--- a/BankApp/BankApp.Services/BankApp.Services.csproj
+++ b/BankApp/BankApp.Services/BankApp.Services.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BankApp.Models\BankApp.Models.csproj" />
   </ItemGroup>
 
